
This file is about changes in Emacs version 27.

See file HISTORY for a list of GNU Emacs versions and release dates.
See files NEWS.26, NEWS.25, NEWS.24, NEWS.23, NEWS.22, NEWS.21,
NEWS.20, NEWS.19, NEWS.18, and NEWS.1-17 for changes in older Emacs
versions.

You can narrow news to a specific version by calling 'view-emacs-news'
with a prefix argument or by typing C-u C-h C-n.

Temporary note:
+++ indicates that all necessary documentation updates are complete.
    (This means all relevant manuals in doc/ AND lisp doc-strings.)
--- means no change in the manuals is needed.
When you add a new item, use the appropriate mark if you are sure it applies,


* Installation Changes in Emacs 27.1


* Startup Changes in Emacs 27.1


* Changes in Emacs 27.1


* Editing Changes in Emacs 27.1


* Changes in Specialized Modes and Packages in Emacs 27.1

** Enhanced xterm support

*** New variable 'xterm-set-window-title' controls whether Emacs
sets the XTerm window title.  The default is to set the window title.


* New Modes and Packages in Emacs 27.1


* Incompatible Lisp Changes in Emacs 27.1


* Lisp Changes in Emacs 27.1


* Changes in Emacs 27.1 on Non-Free Operating Systems


----------------------------------------------------------------------
This file is part of GNU Emacs.

GNU Emacs is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

GNU Emacs is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with GNU Emacs.  If not, see <https://www.gnu.org/licenses/>.


Local variables:
coding: utf-8
mode: outline
paragraph-separate: "[ 	]*$"
end: